--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 *{
 	margin: 0;
 	padding: 0;
@@ -29,10 +36,12 @@
 }
 
 html{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 *, *::before, *::after{
-	box-sizing: inherit;
+	-webkit-box-sizing: inherit;
+	        box-sizing: inherit;
 }
 
 body{
@@ -91,6 +100,8 @@ li {
 	top: 0;
 	left: 0;
 	width: 100%;
+	-webkit-transition: .2s linear;
+	-o-transition: .2s linear;
 	transition: .2s linear;
 	padding-bottom: 20px;
 	z-index: 999;
@@ -102,16 +113,26 @@ li {
 }
 
 .header_wrapper{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	align-items: flex-end;
-	justify-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-align: end;
+	    -ms-flex-align: end;
+	        align-items: flex-end;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	padding-top: 56px;
 }
 
 .header_list{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 }
 
 .header_item{
@@ -160,7 +181,9 @@ li {
 
 .burger_line_second{
 	top: 50%;
-	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	    -ms-transform: translateY(-50%);
+	        transform: translateY(-50%);
 }
 
 
@@ -176,7 +199,7 @@ li {
 /*intro styles start*/
 .intro{
 	min-height: 150vh;
-	background: url(../travel/img/intro-bg.png) no-repeat center;
+	background: url(../travel/img/intro-bg-min.png) no-repeat center;
 	background-size: cover;
 	padding-top: 263px;
 	padding-bottom: 223px;
@@ -205,8 +228,11 @@ li {
 }
 
 .search-form_info{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 }
 
 .search-form_field{
@@ -218,6 +244,30 @@ li {
 	margin-right: 60px;
 	padding-left: 43px;
 	padding-bottom: 22px;
+	font-weight:500;
+    font-size:18px;
+    color: #fff;
+}
+
+.search-form_field::-webkit-input-placeholder{
+	font-weight:500;
+    font-size:18px;
+    color: #fff;
+}
+
+.search-form_field::-moz-placeholder{
+	font-weight:500;
+    font-size:18px;
+    color: #fff;
+}
+
+.search-form_field:-ms-input-placeholder{
+	font-weight:500;
+    font-size:18px;
+    color: #fff;
+}
+
+.search-form_field::-ms-input-placeholder{
 	font-weight:500;
     font-size:18px;
     color: #fff;
@@ -255,7 +305,8 @@ li {
 	max-width: 1262px;
 	background-color: #fff;
 	margin: 0 auto;
-	box-shadow:  0px 2px 20px rgba(21, 24,36,0.1593);
+	-webkit-box-shadow:  0px 2px 20px rgba(21, 24,36,0.1593);
+	        box-shadow:  0px 2px 20px rgba(21, 24,36,0.1593);
 	position: relative;
 }
 
@@ -271,12 +322,16 @@ li {
     position: absolute;
     top: 0;
     left: 0;
-    transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+        -ms-transform: translateY(-100%);
+            transform: translateY(-100%);
     background-color: #fff;
 }
 
 .benefits_cards{
+	display: -ms-grid;
 	display: grid;
+	-ms-grid-columns: 1fr 55px 1fr 55px 1fr;
 	grid-template-columns: repeat(3, 1fr);
 	grid-column-gap: 55px;
 	padding: 0 100px;
@@ -284,6 +339,7 @@ li {
 }
 
 .benefits_card{
+	-ms-grid-column-span: 1;
 	grid-column: span 1;
 	margin-bottom: 112px;
 }
@@ -319,6 +375,8 @@ li {
 	color: #006DFE;
 	text-decoration: none;
 	background: url(../travel/img/svg/shape-ico.svg) no-repeat 95% center;
+	-webkit-transition: .2s all;
+	-o-transition: .2s all;
 	transition: .2s all;
 }
 
@@ -337,9 +395,15 @@ li {
 }
 
 .places_caption{
-	display: flex;flex-wrap: wrap;
-	align-items: center;
-	justify-content: space-between;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;-ms-flex-wrap: wrap;flex-wrap: wrap;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	margin-bottom: 36px;
 }
 
@@ -362,7 +426,9 @@ li {
 
 
 .places_cards{
+	display: -ms-grid;
 	display: grid;
+	-ms-grid-columns: 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr;
 	grid-template-columns: repeat(6,1fr);
 	grid-column-gap: 10px;
 	grid-row-gap: 10px;
@@ -387,7 +453,9 @@ li {
 
 
 .places_card:hover .places_card-pic{
-	transform: scale(1.05);
+	-webkit-transform: scale(1.05);
+	    -ms-transform: scale(1.05);
+	        transform: scale(1.05);
 }
 
 .places_card-title{
@@ -401,27 +469,33 @@ li {
 }
 
 .places_card_size_lg{
+	-ms-grid-column-span: 3;
 	grid-column: span 3;
 }
 
 .places_card_size_sm{
+	-ms-grid-column-span: 2;
 	grid-column: span 2;
 }
 
 .places_card-pic{
 	width: 100%;
+	-webkit-transition: .15s all;
+	-o-transition: .15s all;
 	transition: .15s all;
 }
 
 
 .places_card-pic_size_lg{
 	height: 354px;
-	object-fit: cover;
+	-o-object-fit: cover;
+	   object-fit: cover;
 }
 
 .places_card-pic_size_sm{
 	height: 283px;
-	object-fit: cover;
+	-o-object-fit: cover;
+	   object-fit: cover;
 }
 
 .places_card-link{
@@ -444,10 +518,14 @@ li {
 }
 
 .tours_tour{
+	display: -ms-grid;
 	display: grid;;
+	-ms-grid-columns: 1fr 108px 1fr;;
 	grid-template-columns: repeat(2, 1fr);
 	grid-column-gap: 108px;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	margin-bottom: 77px;
 }
 
@@ -497,7 +575,9 @@ li {
 }
 
 .top_cards{
+	display: -ms-grid;
 	display: grid;
+	-ms-grid-columns: 1fr 57px 1fr 57px 1fr 57px 1fr 57px 1fr 57px 1fr;
 	grid-template-columns: repeat(6, 1fr);
 	grid-column-gap: 57px;
 	grid-row-gap: 57px;
@@ -511,18 +591,31 @@ li {
 
 
 .top_card{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-ms-grid-column-span: 2;
 	grid-column: span 2;
 }
 
 
 
 .top_card-stats{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: flex-end;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -627,8 +720,11 @@ li {
 
 
 .footer_item{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 }
 
 
@@ -638,9 +734,14 @@ li {
 
 
 .footer_nav{
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	width: 50%;
 }
 
@@ -695,14 +796,17 @@ li {
 	}
 
 	.benefits_wrap{
-		box-shadow: none;
+		-webkit-box-shadow: none;
+		        box-shadow: none;
 	}
 
 	.places_card_size_lg{
+		-ms-grid-column-span: 6;
 		grid-column: span 6;
 	}
 
 	.places_card_size_sm{
+		-ms-grid-column-span: 6;
 		grid-column: span 6;
 	}
 
@@ -731,6 +835,7 @@ li {
 	}
 
 	.top_card{
+		-ms-grid-column-span: 3;
 		grid-column: span 3;
 	}
 
@@ -774,13 +879,19 @@ li {
 		background: #000;
 		z-index: 10;
 		padding: 75px;
-		transform: translateX(100%);
+		-webkit-transform: translateX(100%);
+		    -ms-transform: translateX(100%);
+		        transform: translateX(100%);
+		-webkit-transition: .2s all linear;
+		-o-transition: .2s all linear;
 		transition: .2s all linear;
 	}
 
 
 	.header_nav_active{
-		transform: translateX(0);
+		-webkit-transform: translateX(0);
+		    -ms-transform: translateX(0);
+		        transform: translateX(0);
 	}
 
 	.header_item{
@@ -819,11 +930,15 @@ li {
 
 
 	.header_nav-close-line:first-child{
-			transform: translateY(-50%) rotate(45deg);
+			-webkit-transform: translateY(-50%) rotate(45deg);
+			    -ms-transform: translateY(-50%) rotate(45deg);
+			        transform: translateY(-50%) rotate(45deg);
 	}
 
 	.header_nav-close-line:last-child{
-			transform: translateY(-50%) rotate(-45deg);
+			-webkit-transform: translateY(-50%) rotate(-45deg);
+			    -ms-transform: translateY(-50%) rotate(-45deg);
+			        transform: translateY(-50%) rotate(-45deg);
 	}
 
 
@@ -849,6 +964,26 @@ li {
 	}
 
 
+	.search-form_field::-webkit-input-placeholder{
+		font-size: 16px;
+	}
+
+
+	.search-form_field::-moz-placeholder{
+		font-size: 16px;
+	}
+
+
+	.search-form_field:-ms-input-placeholder{
+		font-size: 16px;
+	}
+
+
+	.search-form_field::-ms-input-placeholder{
+		font-size: 16px;
+	}
+
+
 	.search-form_field::placeholder{
 		font-size: 16px;
 	}
@@ -870,6 +1005,7 @@ li {
 
 
 	.benefits_card{
+		-ms-grid-column-span: 3;
 		grid-column: span 3;
 		margin-bottom: 40px;
 	}
@@ -914,6 +1050,7 @@ li {
 
 
 	.tour_pic, .tour_info{
+		-ms-grid-column-span: 2;
 		grid-column: span 2;
 	}
 
@@ -922,7 +1059,8 @@ li {
 	}
 
 	.tour_pic_mob_firse{
-		grid-row-start: -1;
+		-ms-grid-row: -1;
+		    grid-row-start: -1;
 	}
 
 
@@ -936,6 +1074,7 @@ li {
 
 
 	.top_card{
+		-ms-grid-column-span: 6;
 		grid-column: span 6;
 	}
 
